# factorylib

./: LICENSE  README.md  pyproject.toml  tmp_problem_statement.md
.github/workflows/: ci.yml
src/factorylib/: __init__.py  network.py  optimize.py  simple.py
tests/: conftest.py  test_network.py  test_optimize.py  test_simple.py  test_wuling.py
tests/wuling/: _helpers.py  test_baseline.py  test_jade_gourd.py  test_xiranite_gourd.py
